--- a/index.html
+++ b/index.html
@@ -3,24 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello World</title>
+  <title>Hello World con Immagine</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       background: #f0f2f5;
-      display: flex;
-      height: 100vh;
-      justify-content: center;
-      align-items: center;
+      text-align: center;
       margin: 0;
+      padding: 2rem;
     }
     h1 {
       color: #333;
       font-size: 3rem;
+      margin-bottom: 2rem;
+    }
+    img {
+      max-width: 80%;
+      height: auto;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
   </style>
 </head>
 <body>
   <h1>Hello World 🌍</h1>
+  <!-- Sostituisci l'URL con la tua immagine -->
+  <img src="miafoto.jpg" alt="La mia immagine">
 </body>
 </html>
