--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 <body>
   <h1>Hello World 🌍</h1>
   <!-- Sostituisci l'URL con la tua immagine -->
-  <img src="miafoto.jpg" alt="La mia immagine">
+  <img src="foto_laurea_gallina2.png" alt="La mia immagine">
 </body>
 </html>
