--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <img src="miafoto.png" alt="La mia immagine">
 
   <h2>If you were to contact me:</h2>
-  <form action="https://formspree.io/f/tuo-endpoint" method="POST">
+  <form action="https://formspree.io/f/meolnbde" method="POST">
     <input type="text" name="name" placeholder="Your name" required>
     <input type="email" name="email" placeholder="Your email" required>
     <textarea name="message" rows="5" placeholder="Your message..." required></textarea>
