--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </style>
 </head>
 <body>
-  <h1>Hello World 🌍</h1>
+  <h1>Chicken graduate 🐔</h1>
   <img src="foto_laurea_gallina2.png" alt="La mia immagine">
 
   <h2>If you were to contact me:</h2>
