--- a/index.html
+++ b/index.html
@@ -1,59 +1,12 @@
 <!DOCTYPE html>
-<html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello World con Contatto</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f0f2f5;
-      text-align: center;
-      margin: 0;
-      padding: 2rem;
-    }
-    h1 {
-      color: #333;
-      font-size: 3rem;
-      margin-bottom: 2rem;
-    }
-    img {
-      max-width: 80%;
-      height: auto;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      margin-bottom: 2rem;
-    }
-    form {
-      background: #fff;
-      padding: 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      max-width: 400px;
-      margin: auto;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 0.5rem;
-      margin: 0.5rem 0;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-    button {
-      background: #0078d7;
-      color: #fff;
-      border: none;
-      padding: 0.7rem 1.2rem;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 1rem;
-    }
-    button:hover {
-      background: #005fa3;
-    }
-  </style>
-</head>
-<body>
-  <h1>🐔</h1>
-</body>
+<canvas id="canvas"></canvas>
+<link rel="stylesheet" href="style.css" />
+<div class="hidden">
+  <img
+    id="source"
+    src="depositphotos_426027152-stock-illustration-blank-music-staff-isolated-on.jpg"
+    width="1024"
+    height="410" />
+</div>
+<script src="script.js"></script>
 </html>
