--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <canvas id="canvas"></canvas>
 <link rel="stylesheet" href="style.css" />
+<p style="font-size: 20px; color:#1F9AFE;">
+<a href="Webpage_FilePath">About this site</a>
+</p>
 <div class="hidden">
   <img
     id="source"
