--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <canvas id="canvas"></canvas>
 <link rel="stylesheet" href="style.css" />
 <p style="font-size: 20px; color:#1F9AFE;">
-<a href="Webpage_FilePath">About this site</a>
+<a href="sheet.html">About this site</a>
 </p>
 <div class="hidden">
   <img
