--- a/sheet.html
+++ b/sheet.html
@@ -4,4 +4,17 @@
     <meta charset="utf-8">
     <title>About</title>
   </head>
+  <!DOCTYPE html>
+<canvas id="canvas"></canvas>
+<link rel="stylesheet" href="style.css" />
+</p>
+<div class="hidden">
+  <img
+    id="source"
+    src="images/depositphotos_426027152-stock-illustration-blank-music-staff-isolated-on.jpg"
+    width="1024"
+    height="410" />
+</div>
+<script src="script.js"></script>
+</html>
 </html>
