--- a/index.html
+++ b/index.html
@@ -2,14 +2,9 @@
 <canvas id="canvas"></canvas>
 <link rel="stylesheet" href="style.css" />
 <p style="font-size: 20px; color:#1F9AFE;">
-<a href="sheet.html">About this site</a>
+<a href="sheet.html">Sheet music</a>
 </p>
 <div class="hidden">
-  <img
-    id="source"
-    src="images/depositphotos_426027152-stock-illustration-blank-music-staff-isolated-on.jpg"
-    width="1024"
-    height="410" />
 </div>
 <script src="script.js"></script>
 </html>
