--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="image">
-        <img src="bethany.jpg" alt="Bethany Jones holding ice cream">
+        <img src="foto_laurea_gallina2.jpg" alt="Bethany Jones holding ice cream">
       </div>
     </section>
   </main>
