--- a/index.html
+++ b/index.html
@@ -3,54 +3,47 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sito</title>
+  <title>Bethany Jones</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Canvas come sfondo -->
-  <canvas id="canvas"></canvas>
 
-  <!-- Contenuto del sito -->
-  <div class="site">
-    <header class="topnav">
-      <nav>
-        <a href="#">BIO</a>
-        <a href="#">PORTFOLIO</a>
-        <a href="#">PODCAST</a>
-        <a href="#">BLOG</a>
-      </nav>
-    </header>
+  <header class="topnav">
+    <nav>
+      <a href="#">BIO</a>
+      <a href="#">PORTFOLIO</a>
+      <a href="#">PODCAST</a>
+      <a href="#">BLOG</a>
+    </nav>
+  </header>
 
-    <main>
-      <section class="card">
-        <div class="text">
-          <h1>Bethany Jones</h1>
-          <p>I'm a dedicated culture critic and blogger located in San Francisco, California.</p>
-          <p class="handle">@reallygreatsite</p>
+  <main>
+    <section class="card">
+      <div class="text">
+        <h1>Bethany Jones</h1>
+        <p>I'm a dedicated culture critic and blogger located in San Francisco, California.</p>
+        <p class="handle">@reallygreatsite</p>
 
-          <div class="social">
-            <a aria-label="Instagram" href="#">IG</a>
-            <a aria-label="Facebook" href="#">FB</a>
-            <a aria-label="Twitter/X" href="#">TW</a>
-            <a aria-label="LinkedIn" href="#">IN</a>
-          </div>
-
-          <p class="sheet">
-            <a href="sheet.html">Sheet music</a>
-          </p>
+        <div class="social">
+          <a href="#">IG</a>
+          <a href="#">FB</a>
+          <a href="#">TW</a>
+          <a href="#">IN</a>
         </div>
 
-        <div class="image">
-          <img src="foto_laurea_gallina2.png" alt="Bethany con gelato" />
-        </div>
-      </section>
-    </main>
-  </div>
+        <p class="sheet">
+          <a href="sheet.html">Sheet music</a>
+        </p>
+      </div>
 
-  <div class="hidden"></div>
-  <script src="script.js"></script>
+      <div class="image">
+        <img src="foto_laurea_gallina2.png" alt="Bethany con gelato" />
+      </div>
+    </section>
+  </main>
+
 </body>
 </html>
