--- a/index.html
+++ b/index.html
@@ -1,49 +1,15 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bethany Jones</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-
-  <header class="topnav">
-    <nav>
-      <a href="#">BIO</a>
-      <a href="#">PORTFOLIO</a>
-      <a href="#">PODCAST</a>
-      <a href="#">BLOG</a>
-    </nav>
-  </header>
-
-  <main>
-    <section class="card">
-      <div class="text">
-        <h1>Bethany Jones</h1>
-        <p>I'm a dedicated culture critic and blogger located in San Francisco, California.</p>
-        <p class="handle">@reallygreatsite</p>
-
-        <div class="social">
-          <a href="#">IG</a>
-          <a href="#">FB</a>
-          <a href="#">TW</a>
-          <a href="#">IN</a>
-        </div>
-
-        <p class="sheet">
-          <a href="sheet.html">Sheet music</a>
-        </p>
-      </div>
-
-      <div class="image">
-        <img src="foto_laurea_gallina2.png" alt="Bethany con gelato" />
-      </div>
-    </section>
-  </main>
-
-</body>
+<canvas id="canvas"></canvas>
+<link rel="stylesheet" href="style.css" />
+<p style="font-size: 20px; color:#1F9AFE;">
+<a href="sheet.html">About this site</a>
+<a href="sheet.html">Sheet music</a>
+</p>
+<div class="hidden">
+  <img
+    id="source"
+    src="images/depositphotos_426027152-stock-illustration-blank-music-staff-isolated-on.jpg"
+    width="1024"
+    height="410" />
+</div>
+<script src="script.js"></script>
 </html>
