--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <canvas id="canvas"></canvas>
 <link rel="stylesheet" href="style.css" />
+<link rel="icon" href="favicon.ico">
 <p style="font-size: 20px; color:#1F9AFE;">
 <a href="sheet.html">Sheet music</a>
 </p>
