--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Sito</title>
 
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
