--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 <title>Sito</title>
 
 <link rel="stylesheet" href="style.css" />
-<link rel="icon" type="image/png" href="icon.png">
-<link rel="shortcut icon" type="image/png" href="icon.png">
-<link rel="apple-touch-icon" href="icon.png">
+<link rel="icon" type="image/png" href="icon.png?">
 
 </head>
 
