--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Sito</title>
+<title>Matteo Cacioppo</title>
 
 <link rel="stylesheet" href="style.css" />
-<link rel="icon" type="image/png" href="icon.png?">
+<link rel="icon" type="image/png" href="icon.png?" sizes="32x32">
 
 </head>
 
