--- a/sheet.html
+++ b/sheet.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>About</title>
-  </head>
-  <!DOCTYPE html>
-<canvas id="canvas"></canvas>
-<link rel="stylesheet" href="style.css" />
-</p>
-<div class="hidden">
-  <img
-    id="source"
-    src="images/depositphotos_426027152-stock-illustration-blank-music-staff-isolated-on.jpg"
-    width="1024"
-    height="410" />
-</div>
-<script src="script.js"></script>
-</html>
+<head>
+  <meta charset="utf-8">
+  <title>Matteo Cacioppo</title>
+  <link rel="stylesheet" href="style2.css">
+</head>
+<body>
+
+  <main>
+    <canvas id="canvas"></canvas>
+  </main>
+
+  <div class="hidden">
+    <img
+      id="source"
+      src="depositphotos_426027152-stock-illustration-blank-music-staff-isolated-on-Photoroom.png"
+      width="1024"
+      height="410"
+      alt="music staff background">
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
