--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   <header>
+    <img src="undraw_page-eaten_b2rt.svg" alt="Logo" class="logo">
     <nav>
       <ul>
         <li><a href="assets/Cacioppo_CV.pdf" download>CV</a></li>
@@ -18,6 +19,7 @@
       </ul>
     </nav>
   </header>
+
 
   <main>
     <section class="intro">
