--- a/sheet.html
+++ b/sheet.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+<header>
+<a href="index.html" class="nav-link">Home</a>
+</header>
+
   <main>
     <canvas id="canvas"></canvas>
   </main>
