--- a/sheet.html
+++ b/sheet.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Matteo Cacioppo</title>
   <link rel="stylesheet" href="style2.css">
+  <link rel="icon" type="image/png" href="icon.png?">
 </head>
 <body>
 
