--- a/index.html
+++ b/index.html
@@ -38,6 +38,27 @@
         <img src="developer2.svg" alt="Developer Illustration">
       </div>
     </section>
+    <section class="cv-section" id="cv">
+  <div class="cv-frame">
+  <h2>Curriculum Vitae</h2>
+  <p><strong>Name:</strong> Matteo Cacioppo</p>
+  <p><strong>Profile:</strong> Biophysicist graduate and machine learning expert</p>
+  <h3>Experience</h3>
+  <ul>
+    <li>Research Fellowship ENEA 2025-ongoing</li>
+  </ul>
+  <h3>Education</h3>
+  <ul>
+    <li>MSc Biophysics, La Sapienza University.</li>
+    <li>BSc in Physics, La Sapienza University.</li>
+  </ul>
+  <h3>Competences</h3>
+  <p>Python, C++, Deep Learning, Pytorch.</p>
+</div>
+
+</section>
   </main>
+<div class="down-arrow">⌵</div>
+<script src="scroll.js"></script>
 </body>
 </html>
