--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     </nav>
   </header>
 
-
   <main>
     <section class="intro">
       <div class="text">
@@ -38,27 +37,39 @@
         <img src="developer2.svg" alt="Developer Illustration">
       </div>
     </section>
-    <section class="cv-section" id="cv">
-  <div class="cv-frame">
-  <h2>Curriculum Vitae</h2>
-  <p><strong>Name:</strong> Matteo Cacioppo</p>
-  <p><strong>Profile:</strong> Biophysicist graduate and machine learning expert</p>
-  <h3>Experience</h3>
-  <ul>
-    <li>Research Fellowship ENEA 2025-ongoing</li>
-  </ul>
-  <h3>Education</h3>
-  <ul>
-    <li>MSc Biophysics, La Sapienza University.</li>
-    <li>BSc in Physics, La Sapienza University.</li>
-  </ul>
-  <h3>Competences</h3>
-  <p>Python, C++, Deep Learning, Pytorch.</p>
-</div>
 
-</section>
+    <section class="cv-section" id="cv">
+      <div class="cv-frame" id="cvObject">
+        <div class="cv-inner">
+          <div class="cv-front">
+            <h2>Curriculum Vitae</h2>
+            <p><strong>Name:</strong> Matteo Cacioppo</p>
+            <p><strong>Profile:</strong> Biophysicist graduate and machine learning expert</p>
+            <h3>Experience</h3>
+            <ul>
+              <li>Research Fellowship ENEA 2025–ongoing</li>
+            </ul>
+            <h3>Education</h3>
+            <ul>
+              <li>MSc Biophysics, La Sapienza University</li>
+              <li>BSc Physics, La Sapienza University</li>
+            </ul>
+            <h3>Competences</h3>
+            <p>Python, C++, Deep Learning, PyTorch</p>
+          </div>
+
+          <div class="cv-back">
+            <h2>More Info</h2>
+            <p>Email: matteo.cacioppo7@gmail.com</p>
+            <p>GitHub: github.com/matteocacioppo</p>
+            <p>LinkedIn: linkedin.com/in/matteocacioppo</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
-<div class="down-arrow">⌵</div>
-<script src="scroll.js"></script>
+
+  <div class="down-arrow">⌵</div>
+  <script src="scroll.js"></script>
 </body>
 </html>
