--- a/index.html
+++ b/index.html
@@ -38,35 +38,71 @@
       </div>
     </section>
 
-    <section class="cv-section" id="cv">
-      <div class="cv-frame" id="cvObject">
-        <div class="cv-inner">
-          <div class="cv-front">
-            <h2>Curriculum Vitae</h2>
-            <p><strong>Name:</strong> Matteo Cacioppo</p>
-            <p><strong>Profile:</strong> Biophysicist graduate and machine learning expert</p>
-            <h3>Experience</h3>
-            <ul>
-              <li>Research Fellowship ENEA 2025–ongoing</li>
-            </ul>
-            <h3>Education</h3>
-            <ul>
-              <li>MSc Biophysics, La Sapienza University</li>
-              <li>BSc Physics, La Sapienza University</li>
-            </ul>
-            <h3>Competences</h3>
-            <p>Python, C++, Deep Learning, PyTorch</p>
-          </div>
+   <section class="cv-section" id="cv">
+  <div class="cv-frame">
+    <div class="cv-inner">
+      <div class="cv-front">
+        <h2>Matteo Cacioppo</h2>
+        <p><strong>Location:</strong> Rome, Italy</p>
+        <p><strong>Number:</strong> +39 3339680840</p>
 
-          <div class="cv-back">
-            <h2>More Info</h2>
-            <p>Email: matteo.cacioppo7@gmail.com</p>
-            <p>GitHub: github.com/matteocacioppo</p>
-            <p>LinkedIn: linkedin.com/in/matteocacioppo</p>
-          </div>
-        </div>
+        <h3>Profile</h3>
+        <p>ML researcher with a strong background in biophysics and artificial intelligence applied to imaging, signal processing, and Retrieval-Augmented Generation (RAG) systems.</p>
+        <h3>Work Experience</h3>
+        <ul>
+          <li>
+            <strong>Research Fellowship – ENEA</strong> (09/2025 – Present, Frascati, Italy)<br>
+            Project: Development of AI systems for the generation of machine learning algorithms in smart node networks, 
+            pattern and feature analysis in data series, and research support using Large Language Models (LLMs).
+          </li>
+        </ul>
+
+        <h3>Education</h3>
+        <ul>
+          <li><strong>MSc in Physics</strong> — La Sapienza University (Rome, 10/2022 – 01/2025, 110/110 cum laude)<br>
+            Thesis: LSTM Neural Network for Real-Time Motion Artefact Correction in MRS Scans.
+          </li>
+          <li><strong>BSc in Physics</strong> — La Sapienza University (Rome, 10/2015 – 11/2022)<br>
+            Thesis: Raman Spectroscopy in the Frequency and Fourier Domain.
+          </li>
+          <li><strong>Scientific High School Diploma</strong> — Liceo Scientifico (Italy, 09/2010 – 06/2015)</li>
+        </ul>
+
+        <h3>Projects</h3>
+        <ul>
+          <li><strong>LIS Gesture Classification using LSTM and Feature Fusion (2025)</strong><br>
+            Developed an LSTM-based network for classifying 126 Italian Sign Language gestures using multimodal fusion of RGB and radar data.
+          </li>
+          <li><strong>Motion Artefact Correction in MRS (2024)</strong><br>
+            Designed an LSTM-based model predicting patient motion from navigator data to improve scan quality in the RECENTRE project.
+          </li>
+          <li><strong>Graph Coloring with Graph Neural Networks (2023)</strong><br>
+            Built a GNN using DGL to solve graph coloring problems, introducing a physics-inspired loss based on the Potts model.
+          </li>
+        </ul>
+
+        <h3>Publications</h3>
+        <p>
+          <em>Real-Time Motion Correction in Magnetic Resonance Spectroscopy: AI solution inspired by fundamental science.</em><br>
+          arXiv:2509.24676 (2025); Poster presented at EuCAIFCon 06/2025, Cagliari, Italy.
+        </p>
+        <p>
+          <em>Real-Time Motion Correction in Magnetic Resonance Spectroscopy: a complete overview of the reconstruction process.</em><br>
+          Poster presented at The XIV Workshop of the International School on Magnetic Resonance and Brain Function (ISMRBF) 10/2025, Erice, Italy.
+        </p>
+
+        <h3>Skills</h3>
+        <ul>
+          <li><strong>Programming:</strong> Python, C++, LaTeX, PyTorch, R (basic)</li>
+          <li><strong>Tools:</strong> Docker, Git, GitHub, Linux</li>
+          <li><strong>Languages:</strong> Italian (native), English (high level)</li>
+        </ul>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
+
+
   </main>
 
   <div class="down-arrow">⌵</div>
