--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
         <h3>Publications</h3>
         <p>
           <em>Real-Time Motion Correction in Magnetic Resonance Spectroscopy: AI solution inspired by fundamental science.</em><br>
-          arXiv:2509.24676 (2025); Poster presented at EuCAIFCon 06/2025, Cagliari, Italy.
+          arXiv:2509.24676 (2025);<br>
+           Poster presented at EuCAIFCon 06/2025, Cagliari, Italy.
         </p>
         <p>
           <em>Real-Time Motion Correction in Magnetic Resonance Spectroscopy: a complete overview of the reconstruction process.</em><br>
