--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p><strong>Number:</strong> +39 3339680840</p>
 
         <h3>Profile</h3>
-        <p>ML researcher with a strong background in biophysics and artificial intelligence applied to imaging, signal processing, and Retrieval-Augmented Generation (RAG) systems.</p>
+        <p>ML researcher with a strong background in biophysics and artificial intelligence applied to imaging, signal processing and Retrieval-Augmented Generation (RAG) systems.</p>
         <h3>Work Experience</h3>
         <ul>
           <li>
