--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="intro">
       <div class="text">
         <h1>Matteo Cacioppo</h1>
-        <p>Biophysicist and Machine Learning expert.</p>
+        <p>Biophysicist and self-proclaimed machine learning expert.</p>
 
         <div class="socials">
           <a href="mailto:matteo.cacioppo7@gmail.com"><i class="fas fa-envelope"></i></a>
