--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h3>Publications</h3>
             <p>
               <em>Real-Time Motion Correction in Magnetic Resonance Spectroscopy: AI solution inspired by fundamental science.</em><br>
-              arXiv:2509.24676 (2025)<br>
+              <a href="https://arxiv.org/abs/2509.24676">arXiv:2509.24676 (2025)</a><br>
               Poster presented at EuCAIFCon 06/2025, Cagliari, Italy.
             </p>
             <p>
