--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <li><strong>LIS Gesture Classification using LSTM and Feature Fusion (2025)</strong><br>
                 Developed an LSTM-based network for classifying 126 Italian Sign Language gestures using multimodal fusion of RGB and radar data.
               </li>
-              <li><strong>Motion Artefact Correction in MRS (2024)</strong><br>
+              <li><strong>Motion Artefact Correction in MRS (2024)</strong>(MSc thesis)<br>
                 Designed an LSTM-based model predicting patient motion from navigator data to improve scan quality in the RECENTRE project.
               </li>
               <li><strong>Graph Coloring with Graph Neural Networks (2023)</strong><br>
