--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <h3>Skills</h3>
             <ul>
-              <li><strong>Programming:</strong> Python, C++, LaTeX, PyTorch</li>
+              <li><strong>Programming:</strong> Python, C++, LaTeX, PyTorch, C</li>
               <li><strong>Tools:</strong> Docker, Git, GitHub, Linux</li>
               <li><strong>Languages:</strong> Italian (native), English (high level)</li>
             </ul>
