--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,9 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="icon" type="image/png" href="icon.png?">
-  <script data-goatcounter="https://matteocacioppo.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
+  <script data-goatcounter="https://matteocacioppo.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
+
 <body>
   <header>
     <img src="undraw_page-eaten_b2rt.svg" alt="Logo" class="logo">
@@ -46,28 +47,31 @@
           <div class="cv-front">
 
             <!-- FOTO PROFILO ROTONDA -->
-            <img src="mc.jpeg" alt="Profile photo" 
-                 style="width:120px; height:120px; border-radius:50%; object-fit:cover; float:right; margin-left:15px;">
+            <img src="mc.jpeg" alt="Profile photo"
+              style="width:120px; height:120px; border-radius:50%; object-fit:cover; float:right; margin-left:15px;">
 
             <h2>Matteo Cacioppo</h2>
             <p><strong>Location:</strong> Rome, Italy</p>
             <p><strong>Number:</strong> +39 3339680840</p>
 
             <h3>Profile</h3>
-            <p>ML researcher with a strong background in biophysics and artificial intelligence applied to imaging, signal processing and Retrieval-Augmented Generation (RAG) systems.</p>
+            <p>ML researcher with a strong background in biophysics and artificial intelligence applied to imaging,
+              signal processing and Retrieval-Augmented Generation (RAG) systems.</p>
 
             <h3>Work Experience</h3>
             <ul>
               <li>
                 <strong>Research Fellowship – ENEA</strong> (09/2025 – Present, Frascati, Italy)<br>
-                Project: Development of AI systems for the generation of machine learning algorithms in smart node networks, 
+                Project: Development of AI systems for the generation of machine learning algorithms in smart node
+                networks,
                 pattern and feature analysis in data series, and research support using Large Language Models (LLMs).
               </li>
             </ul>
 
             <h3>Education</h3>
             <ul>
-              <li><strong>MSc in Physics</strong> — La Sapienza University (Rome, 10/2022 – 01/2025, 110/110 cum laude)<br>
+              <li><strong>MSc in Physics</strong> — La Sapienza University (Rome, 10/2022 – 01/2025, 110/110 cum
+                laude)<br>
                 Thesis: LSTM Neural Network for Real-Time Motion Artefact Correction in MRS Scans.
               </li>
               <li><strong>BSc in Physics</strong> — La Sapienza University (Rome, 10/2015 – 11/2022)<br>
@@ -79,30 +83,37 @@
             <h3>Projects</h3>
             <ul>
               <li><strong>LIS Gesture Classification using LSTM and Feature Fusion (2025)</strong><br>
-                Developed an LSTM-based network for classifying 126 Italian Sign Language gestures using multimodal fusion of RGB and radar data.
+                Developed an LSTM-based network for classifying 126 Italian Sign Language gestures using multimodal
+                fusion of RGB and radar data.
               </li>
               <li><strong>Motion Artefact Correction in MRS (2024)</strong>(MSc thesis)<br>
-                Designed an LSTM-based model predicting patient motion from navigator data to improve scan quality in the RECENTRE project.
+                Designed an LSTM-based model predicting patient motion from navigator data to improve scan quality in
+                the RECENTRE project.
               </li>
               <li><strong>Graph Coloring with Graph Neural Networks (2023)</strong><br>
-                Built a GNN using DGL to solve graph coloring problems, introducing a physics-inspired loss based on the Potts model.
+                Built a GNN using DGL to solve graph coloring problems, introducing a physics-inspired loss based on the
+                Potts model.
               </li>
             </ul>
 
             <h3>Publications</h3>
             <p>
-              <em>Real-Time Motion Correction in Magnetic Resonance Spectroscopy: AI solution inspired by fundamental science.</em><br>
+              <em>Real-Time Motion Correction in Magnetic Resonance Spectroscopy: AI solution inspired by fundamental
+                science.</em><br>
               <a href="https://arxiv.org/abs/2509.24676">arXiv:2509.24676 (2025)</a><br>
               Poster presented at EuCAIFCon 06/2025, Cagliari, Italy.
             </p>
             <p>
-              <em>Real-Time Motion Correction in Magnetic Resonance Spectroscopy: a complete overview of the reconstruction process.</em><br>
-              Poster presented at The XIV Workshop of the International School on Magnetic Resonance and Brain Function (ISMRBF) 10/2025, Erice, Italy.
+              <em>Real-Time Motion Correction in Magnetic Resonance Spectroscopy: a complete overview of the
+                reconstruction process.</em><br>
+              Poster presented at The XIV Workshop of the International School on Magnetic Resonance and Brain Function
+              (ISMRBF) 10/2025, Erice, Italy.
             </p>
 
             <h3>Skills</h3>
             <ul>
               <li><strong>Programming:</strong> Python, C++, LaTeX, PyTorch, C</li>
+              <li><strong>Framework:</strong> PyTorch, TensorFlow, React</li>
               <li><strong>Tools:</strong> Docker, Git, GitHub, Linux</li>
               <li><strong>Languages:</strong> Italian (native), English (high level)</li>
             </ul>
@@ -116,4 +127,5 @@
   <div class="down-arrow">⌵</div>
   <script src="scroll.js"></script>
 </body>
+
 </html>
