--- a/index.html
+++ b/index.html
@@ -62,9 +62,14 @@
             <ul>
               <li>
                 <strong>Research Fellowship – ENEA</strong> (09/2025 – Present, Frascati, Italy)<br>
-                Project: Development of AI systems for the generation of machine learning algorithms in smart node
-                networks,
-                pattern and feature analysis in data series, and research support using Large Language Models (LLMs).
+                Project: Developing an agentic Retrieval-Augmented Generation (RAG) system that combines knowledge-graph
+                retrieval,
+                vector search, and function-routing orchestration to answer complex queries over scientific documents.
+                The system integrates structured extraction from PDFs, semantic chunking, and cross-reference linking,
+                enabling context-aware retrieval of text, tables, and equations. An orchestrator dynamically selects
+                tools (retrieval, reranking, or specialized functions)
+                to improve accuracy, interpretability, and robustness when handling noisy or highly structured technical
+                content.
               </li>
             </ul>
 
