--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <ul>
               <li>
                 <strong>Research Fellowship – ENEA</strong> (09/2025 – Present, Frascati, Italy)<br>
-                Project: Developing an agentic Retrieval-Augmented Generation (RAG) system that combines knowledge-graph
+                Developing an agentic Retrieval-Augmented Generation (RAG) system that combines knowledge-graph
                 retrieval,
                 vector search, and function-routing orchestration to answer complex queries over scientific documents.
                 The system integrates structured extraction from PDFs, semantic chunking, and cross-reference linking,
