--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 Developing an agentic Retrieval-Augmented Generation (RAG) system that combines knowledge-graph
                 retrieval,
                 vector search, and function-routing orchestration to answer complex queries over scientific documents.
-                The system integrates structured extraction from PDFs, semantic chunking, and cross-reference linking,
+                The system integrates structured extraction from PDFs, semantic chunking and cross-reference linking,
                 enabling context-aware retrieval of text, tables, and equations. An orchestrator dynamically selects
                 tools (retrieval, reranking, or specialized functions)
                 to improve accuracy, interpretability, and robustness when handling noisy or highly structured technical
