--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
           <a href="mailto:matteo.cacioppo7@gmail.com"><i class="fas fa-envelope"></i></a>
           <a href="https://github.com/matteocacioppo" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://www.linkedin.com/in/matteocacioppo" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://scholar.google.com/citations?user=uUcxlJ8AAAAJ&hl=it" target="_blank"><i
-              class="fab fa-scholar"></i></a>
+          <a href="https://scholar.google.com/citations?user=uUcxlJ8AAAAJ&hl=it" target="_blank">
+            <i class="fas fa-book"></i>
+          </a>
+
         </div>
       </div>
 
